# ai-customer-service

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
app/: __init__.py  main.py  models.py
app/core/: cors.py  (+10 more)
deploy/: compose.production.yml
docs/: architecture-blueprint.md  backup-restore.md  deployment.md  development-plan.md  evaluation.md  performance.md  v1-development-plan.md  version-roadmap.md  widget-onboarding-acceptance.md  worker-recovery.md
e2e/: admin-conversations.mobile.spec.ts  admin-login.spec.ts  admin-password.spec.ts  agent.mobile.spec.ts  handoff.spec.ts  knowledge-lifecycle.spec.ts  widget.mobile.spec.ts  widget.refusal.spec.ts  widget.spec.ts
eval/: generate_v1_dataset.py  knowledge_sources_v1.jsonl  rag_v1.jsonl
examples/: __init__.py
migrations/: README.md  env.py
openapi/: openapi.json
scripts/: __init__.py  backup.sh  bootstrap_admin.py  check_image_secrets.sh  check_secrets.py  component_isolation_probe.py  evaluate_rag.py  export_openapi.py  human_review.py  human_review_server.py  onboarding_acceptance.py  password_input.py  performance_baseline.py  real_provider_smoke.py  restore.sh  run_rag_evaluation.py  seed_demo.py  smoke_v1.py  verify_backup.sh  worker_recovery_probe.py
tests/: conftest.py  test_admin_conversations_api.py  test_bootstrap_admin.py  test_chat_api.py  test_cors.py  test_evaluation_dataset.py  test_handoff_api.py  test_health.py  test_human_review.py  test_human_review_server.py  test_knowledge_api.py  test_onboarding_acceptance.py  test_operational_scripts.py  test_performance_tools.py  test_provider_security.py  test_real_provider_smoke.py  test_release_assets.py  test_run_rag_evaluation.py  test_secret_scan.py  test_security_and_isolation.py  test_seed_demo.py  test_smoke_v1.py  test_tenant_application_api.py  (+2 more)
(+131 files in other folders)
