[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-customer-service"
version = "0.1.0"
description = "Multi-tenant AI customer service platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "boto3>=1.39,<2",
    "celery[redis]>=5.5,<6",
    "cryptography>=45,<47",
    "email-validator>=2.3,<3",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jieba>=0.42,<1",
    "pgvector>=0.4,<1",
    "pwdlib[argon2]>=0.2,<1",
    "pydantic-settings>=2.10,<3",
    "pypdf>=5.8,<7",
    "python-multipart>=0.0.20,<1",
    "pyjwt[crypto]>=2.10,<3",
    "redis>=6,<8",
    "sqlalchemy[asyncio]>=2.0.40,<3",
    "structlog>=25,<26",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21,<1",
    "mypy>=1.17,<2",
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
    "pytest-cov>=6.2,<8",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires PostgreSQL, Redis, or object storage",
    "e2e: exercises a complete user workflow",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"tests/**/*.py" = ["S105", "S106"]
"app/domains/*/schemas.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations/versions"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "jieba", "jieba.*"]
ignore_missing_imports = true
